fixed styling of announcements widget - text overflowing.

--- a/client/src/components/dashboard/maindashboard/widgets/_widget-announcements.scss
+++ b/client/src/components/dashboard/maindashboard/widgets/_widget-announcements.scss
@@ -75,9 +75,14 @@
 }
 .widget_announcement_header {
   display: flex;
-  justify-content: space-between;
+  // justify-content: space-between;
   flex-direction: column;
   margin-bottom: 20px;
+  // overflow-x: hidden;
+  width: 250px;
+  height: 90px;
+
+  text-overflow: ellipsis;
   h3 {
     font-size: 19px;
     color: $highlight;
@@ -86,8 +91,8 @@
     font-size: 11.5px;
     font-weight: 300;
     color: $secondary;
+    margin-top: 5px;
     text-align: justify;
-    text-overflow: ellipsis;
   }
   p {
     font-size: 11.5px;
